loopfor.LoopStairs.scala.error
Compilation error:
LoopStairs:1: error: Missing closing brace `}' assumed here
var finished : Boolean = false
^